RESOLVED FIXED106561
The "outline-offset" property is not found in the computed style property list
https://bugs.webkit.org/show_bug.cgi?id=106561
Summary The "outline-offset" property is not found in the computed style property list
Alexander Pavlov (apavlov)
Reported 2013-01-10 07:04:36 PST
It is not listed in "static const CSSPropertyID computedProperties[]". Upstreaming https://code.google.com/p/chromium/issues/detail?id=157856
Attachments
Patch (4.18 KB, patch)
2013-01-10 07:17 PST, Alexander Pavlov (apavlov)
no flags
Alexander Pavlov (apavlov)
Comment 1 2013-01-10 07:17:18 PST
WebKit Review Bot
Comment 2 2013-01-10 08:28:28 PST
Comment on attachment 182133 [details] Patch Clearing flags on attachment: 182133 Committed r139321: <http://trac.webkit.org/changeset/139321>
WebKit Review Bot
Comment 3 2013-01-10 08:28:32 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.