The "outline-offset" property is not found in the computed style property list https://bugs.webkit.org/show_bug.cgi?id=106561

Reviewed by Alexis Menard.

Source/WebCore:

Listed CSSPropertyOutlineOffset in the CSSComputedStyleDeclaration's computedProperties[].

Test: fast/css/getComputedStyle/getComputedStyle-outline-offset.html

* css/CSSComputedStyleDeclaration.cpp:

LayoutTests:

* fast/css/getComputedStyle/getComputedStyle-outline-offset-expected.txt: Added.
* fast/css/getComputedStyle/getComputedStyle-outline-offset.html: Added.


Canonical link: https://commits.webkit.org/124766@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139321 268f45cc-cd09-0410-ab3c-d52691b4dbfc